<resources>
    <string name="app_name">やいまふに</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_status_list">運航状況一覧</string>
    <string name="title_activity_status_detail">運航状況の詳細</string>
    <string name="title_activity_timetable">時刻表</string>
    <string name="title_activity_tab_timetable">時刻表</string>
    <string name="title_activity_setting">設定</string>
    <string name="title_activity_other">アプリ情報</string>
    <string name="top_description">今日の運航状況を見る</string>
    <string name="top_other">その他</string>
    <string name="detail_dialog_title">本日の運航状況</string>
    <string name="cache_dialog_title">キャッシュ値の設定</string>
    <string name="url_annei_list">http://www.aneikankou.co.jp/</string>
    <string name="url_annei_taketomi">http://aneikankou.co.jp/liner/taketomijima.html</string>
    <string name="url_annei_kohama">http://www.aneikankou.co.jp/liner/kohamajima.html</string>
    <string name="url_annei_kuroshima">http://www.aneikankou.co.jp/liner/kuroshima.html</string>
    <string name="url_annei_oohara">http://www.aneikankou.co.jp/liner/iriomotejima_oohara.html</string>
    <string name="url_annei_uehara">http://www.aneikankou.co.jp/liner/iriomotejima_uehara.html</string>
    <string name="url_annei_hateruma">http://www.aneikankou.co.jp/liner/haterumajima.html</string>
    <string name="url_annei_hatoma">http://aneikankou.co.jp/liner/hatomajima.html</string>
    <string name="url_ykf_list">http://sync5-cnsl.digitalstage.jp/sync/docs.action?s=document%3A1s9n6naZmRe88T4iHVVZkHfyOgyci5qvWMkuaySZJFM0</string>
    <string name="url_ykf_facebook">https://www.facebook.com/yaekan.ishigaki</string>
    <string name="url_dream_list">http://ishigaki-dream.co.jp/</string>
    <string name="banner_ad_unit_id">ca-app-pub-3362500010746452/4785171723</string>
    <string name="transition_top_annei">transition_top_annei</string>
    <string name="tel_annei">0980830055</string>
    <string name="hp_annei">http://aneikankou.co.jp/</string>
    <string name="tel_ykf">0980825010</string>
    <string name="hp_ykf">http://www.yaeyama.co.jp/pg104.html</string>
    <string name="tel_dream">0980843178</string>
    <string name="hp_dream">http://ishigaki-dream.co.jp/</string>
    <string name="other_info">
        当アプリは個人が作成したアプリであり、安栄観光様・八重山観光フェリー様・ドリーム観光様の公式アプリではありません。\n当アプリについての安栄観光様・八重山観光フェリー様・ドリーム観光へのお問い合わせは、ご遠慮頂くようお願い申し上げます。
    </string>
    <string name="mail_address">banbara.work@gmail.com</string>
    <string name="EXTRA_SUBJECT">へのご意見</string>
    <string name="form_address">
        https://docs.google.com/forms/d/1JXzrILj5OPWVlv1QcJbROSuqFyri9s8rgc7dZR-Ate0/viewform?usp=send_form
    </string>
    <string name="time_table_title">時刻表</string>
    <string name="time_table_port_ishigaki">石垣発</string>
    <string name="time_table_port_taketomi">竹富発</string>
    <string name="time_table_port_kuroshima">黒島発</string>
    <string name="time_table_port_kohama">小浜発</string>
    <string name="time_table_port_uehara">上原(西表)発</string>
    <string name="time_table_port_oohara">大原(西表)発</string>
    <string name="time_table_port_hateruma">波照間発</string>
    <string name="time_table_port_hatoma">鳩間発</string>
    <string name="route_taketomi">石垣島 - 竹富島</string>
    <string name="route_kuroshima">石垣島 - 黒島</string>
    <string name="route_kohama">石垣島 - 小浜島</string>
    <string name="route_uehara">石垣島 - 上原(西表島)</string>
    <string name="route_uehara_hatoma">石垣島 - 鳩間島経由上原(西表島)</string>
    <string name="route_oohara">石垣島 - 大原(西表島)</string>
    <string name="route_hateruma">石垣島 - 波照間島</string>
    <string name="route_hatoma">石垣島 - 鳩間島</string>
    <string name="company_name_annei">安栄観光</string>
    <string name="company_name_ykf">八重山観光フェリー</string>
    <string name="company_name_dream">ドリーム観光</string>
    <string name="company_tab_name_annei">安栄観光</string>
    <string name="company_tab_name_ykf">八重山観光\nフェリー</string>
    <string name="company_tab_name_dream">ドリーム観光</string>
    <string name="company_simple_name_annei">安栄</string>
    <string name="company_simple_name_ykf">八重山観光フ</string>
    <string name="company_simple_name_dream">ドリーム観光</string>
    <string name="status_normal">○</string>
    <string name="status_cation">△</string>
    <string name="status_cancel">×</string>
    <string name="annei_taketomi_distance">6.5km</string>
    <string name="annei_taketomi_time">約10ｰ15分</string>
    <string name="annei_taketomi_price_adult">片道 600円\n往復 1,150円</string>
    <string name="annei_taketomi_price_child">片道 310円\n往復 590円</string>
    <string name="annei_taketomi_price_handicapped">片道 310円</string>
    <string name="annei_kohama_distance">約17.7km</string>
    <string name="annei_kohama_time">約25‐30分</string>
    <string name="annei_kohama_price_adult">片道 1,060円\n往復 2,020円</string>
    <string name="annei_kohama_price_child">片道 540円\n往復 1,020円</string>
    <string name="annei_kohama_price_handicapped">片道 540円</string>
    <string name="annei_kuroshima_distance">約18.5km</string>
    <string name="annei_kuroshima_time">約25‐30分</string>
    <string name="annei_kuroshima_price_adult">片道 1,150円\n往復 2,190円</string>
    <string name="annei_kuroshima_price_child">片道 580円\n往復 1,100円</string>
    <string name="annei_kuroshima_price_handicapped">片道 580円</string>
    <string name="annei_oohara_distance">約18.5km</string>
    <string name="annei_oohara_time">約25‐30分</string>
    <string name="annei_oohara_price_adult">片道 1,570円\n往復 2,980円</string>
    <string name="annei_oohara_price_child">片道 790円\n往復 1,500円</string>
    <string name="annei_oohara_price_handicapped">片道 790円</string>
    <string name="annei_uehara_distance">約37.2km</string>
    <string name="annei_uehara_time">約40‐45分</string>
    <string name="annei_uehara_price_adult">片道 2,060円\n往復 3,910円</string>
    <string name="annei_uehara_price_child">片道 1,030円\n往復 1,960円</string>
    <string name="annei_uehara_price_handicapped">片道 1,030円</string>
    <string name="annei_hateruma_distance">約56km</string>
    <string name="annei_hateruma_time">約60‐70分</string>
    <string name="annei_hateruma_price_adult">片道 3,090円\n往復 5,870円</string>
    <string name="annei_hateruma_price_child">片道 1,540円\n往復 2,930円</string>
    <string name="annei_hateruma_price_handicapped">片道 1,550円</string>
    <string name="annei_hatoma_distance">約km</string>
    <string name="annei_hatoma_time">約40‐70分</string>
    <string name="annei_hatoma_price_adult">片道 2,060円\n往復 3,910円</string>
    <string name="annei_hatoma_price_child">片道 1,030円\往復 1,960円</string>
    <string name="annei_hatoma_price_handicapped">片道 1,030円</string>
    <string name="ykf_taketomi_time">約10〜15分</string>
    <string name="ykf_taketomi_price_adult">片道 600円\n往復 1,150円</string>
    <string name="ykf_taketomi_price_child">片道 310円\n往復 590円</string>
    <string name="ykf_kohama_time">約25〜30分</string>
    <string name="ykf_kohama_price_adult">片道 1,060円\n往復 2,020円</string>
    <string name="ykf_kohama_price_child">片道 540円\n往復 1,020円</string>
    <string name="ykf_kuroshima_time">約25〜30分</string>
    <string name="ykf_kuroshima_price_adult">片道 1,150円\n往復 2,190円</string>
    <string name="ykf_kuroshima_price_child">片道 580円\n往復 1,100円</string>
    <string name="ykf_oohara_time">約35〜40分</string>
    <string name="ykf_oohara_price_adult">片道 1,570円\n往復 2,980円</string>
    <string name="ykf_oohara_price_child">片道 790円\n往復 1,500円</string>
    <string name="ykf_uehara_time">約40〜45分</string>
    <string name="ykf_uehara_price_adult">片道 2,060円\n往復 3,910円</string>
    <string name="ykf_uehara_price_child">片道 1,030円\n往復 1,960円</string>
    <string name="ykf_hatoma_time">約40〜45分</string>
    <string name="ykf_hatoma_price_adult">片道 2,060円\n往復 3,910円</string>
    <string name="ykf_hatoma_price_child">片道 1,030円\往復 1,960円</string>
    <string name="dream_taketomi_time">約10分〜15分</string>
    <string name="dream_taketomi_price_adult">片道 600円\n往復 1,140円</string>
    <string name="dream_taketomi_price_child">片道 300円\n往復 570円</string>
    <string name="dream_taketomi_price_adult_ferry">片道 440円</string>
    <string name="dream_taketomi_price_child_ferry">片道 220円</string>
    <string name="dream_kohama_time">約25分〜30分</string>
    <string name="dream_kohama_price_adult">片道 1,060円\n往復 2,010円</string>
    <string name="dream_kohama_price_child">片道 530円\n往復 1,010円</string>
    <string name="dream_kohama_price_adult_ferry">片道 740円</string>
    <string name="dream_kohama_price_child_ferry">片道 370円</string>
    <string name="dream_kohama_taketomi_price_adult">片道 1,030円\n往復 1,960円</string>
    <string name="dream_kohama_taketomi_price_child">片道 520円\n往復 980円</string>
    <string name="dream_kuroshima_time">約30分〜35分</string>
    <string name="dream_kuroshima_price_adult">片道 1,150円\n往復 2,190円</string>
    <string name="dream_kuroshima_price_child">片道 580円\n往復 1,100円</string>
    <string name="dream_kuroshima_price_adult_ferry">片道 820円</string>
    <string name="dream_kuroshima_price_child_ferry">片道 410円</string>
    <string name="dream_oohara_time">約35分〜45分</string>
    <string name="dream_oohara_price_adult">片道 1,570円\n往復 2,980円</string>
    <string name="dream_oohara_price_child">片道 790円\n往復 1,500円</string>
    <string name="dream_oohara_price_adult_ferry">片道 1,100円</string>
    <string name="dream_oohara_price_child_ferry">片道 550円</string>
    <string name="dream_kohama_oohara_price_adult">片道 1,410円</string>
    <string name="dream_kohama_oohara_price_child">片道 710円</string>
    <string name="dream_taketomi_oohara_price_adult">片道 1,460円</string>
    <string name="dream_taketomi_oohara_price_child">片道 730円</string>
    <string name="dream_uehara_time">約55分〜60分</string>
    <string name="dream_uehara_price_adult_ferry">片道 1,420円</string>
    <string name="dream_uehara_price_child_ferry">片道 710円</string>
    <string name="time_table_note_789">7~9月</string>
    <string name="time_table_note_789_description">7・8・9月のみ運航</string>
    <string name="time_table_note_456">4~6月</string>
    <string name="time_table_note_456_description">4・5・4月のみ運航</string>
    <string name="time_table_note_take">竹</string>
    <string name="time_table_note_take_description">竹富島経由</string>
    <string name="time_table_note_take_irregular_description">竹富島経由不定期</string>
    <string name="time_table_note_hato">鳩</string>
    <string name="time_table_note_hato_description">鳩間島経由</string>
    <string name="time_table_oohara_buzz_description">上原航路欠航時、大原⇔上原方面への連結送迎バス（あんえいバス）があります。
        石垣発11:00・大原発12:30便の送迎バスは大原港にて約30分の待ち時間がございます。</string>
    <string name="time_table_note_oo">大</string>
    <string name="time_table_note_oo_description">石垣発11:50・波照間発13:10便は不定期にて大原港経由の場合があります。
        経由した場合の所要時間は約80分です。</string>
    <string name="time_table_note_uehara">上</string>
    <string name="time_table_note_ue_description">鳩間島経由</string>
    <string name="time_table_note_ue_description2">※鳩間島航路は上原航路の経由便の為、上原航路欠航時は運航なしです</string>
    <string name="time_table_note_f">Ｆ</string>
    <string name="time_table_note_kohama">小</string>
    <string name="time_table_init_tab_value">TimeTableInitTabValue</string>
    <string name="time_table_annei_init_spinner_value">TimeTableAnneiInitSpinnerValue</string>
    <string name="time_table_ykf_init_spinner_value">TimeTableYkfInitSpinnerValue</string>
    <string name="time_table_dream_init_spinner_value">TimeTableDreamInitSpinnerValue</string>
    <string name="NCMB_application_key">99f9ad328e9a72cfc482902a8a8b61af7d24a1516ed79e2946aa47b74b61a117</string>
    <string name="NCMB_client_key">ea1485bf126b16b0d5dbb3138e9d7c61643730dd96320750bf4f0c21cf474c03</string>
    <string name="NCMB_annei_table">AnneiLiners</string>
    <string name="NCMB_ykf_table">YkfLiners</string>
    <string name="NCMB_dream_table">DreamLiners</string>
    <string name="NCMB_get_column_name">result_json</string>
    <string name="NCMB_sort_column_name">createDate</string>
    <string name="empty_button_message">取得できませんでした\nタップしてリトライしてください</string>
    <string name="title_activity_weater">海の天気</string>
</resources>