<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!--ヘッダー-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.header"
            android:layout_weight="1"
            android:text="@string/time_table_port_ishigaki"
            />

        <TextView
            style="@style/time_table_text.header"
            android:layout_weight="1"
            android:text="@string/time_table_port_hateruma"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <LinearLayout
        android:id="@+id/hateruma_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="08:30"
            />


        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="09:50"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="10:30"
            />

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="12:00"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="11:50"
            />

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="13:10"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~３列目~~~~~~~~~~~~~~~~~~~~~~~ -->

    <LinearLayout
        android:id="@+id/hateruma_row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="15:30"
            />

        <!--<include layout="@layout/view_time_table_line_tate"/>-->

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="16:50"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        >
        <!--カーフェリー説明-->
        <TextView
            android:id="@+id/time_table_caution_text"
            style="@style/time_table_caution_text"
            android:background="@drawable/corner_round"
            android:text="@string/time_table_note_oo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/time_table_caution_text"
            android:text="@string/time_table_note_oo_description"
            android:textColor="@color/secondary_text"
            android:textSize="12dp"
            />
    </RelativeLayout>

</LinearLayout>