<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!--ヘッダー-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.header"
            android:layout_weight="1"
            android:text="@string/time_table_port_ishigaki"
            />

        <TextView
            style="@style/time_table_text.header"
            android:layout_weight="1"
            android:text="@string/time_table_port_hatoma"
            />
    </LinearLayout>

    <!-- ~~~~~~~~~~~~~~~~~~~~~~~１列目~~~~~~~~~~~~~~~~~~~~~~~ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/view_time_table_annei_hatoma_1"
                style="@style/time_table_text.body"
                android:layout_width="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="09:30"
                />

            <TextView
                style="@style/time_table_caution_text"
                android:layout_toEndOf="@+id/view_time_table_annei_hatoma_1"
                android:layout_toRightOf="@+id/view_time_table_annei_hatoma_1"
                android:background="@drawable/corner_round"
                android:text="上"
                />

        </RelativeLayout>

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="10:45"
            />
    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="10:50"
            />

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="11:35"
            />

    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            style="@style/time_table_text.body"
            android:layout_weight="1"
            android:text="15:30"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/view_time_table_annei_hatoma_2"
                style="@style/time_table_text.body"
                android:layout_width="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="16:15"
                />

            <TextView
                style="@style/time_table_caution_text"
                android:layout_toEndOf="@+id/view_time_table_annei_hatoma_2"
                android:layout_toRightOf="@+id/view_time_table_annei_hatoma_2"
                android:background="@drawable/corner_round"
                android:text="上"
                />

        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/view_time_table_line_yoko"/>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        >

        <!--カーフェリー説明-->
        <TextView
            android:id="@+id/view_time_table_description_ykf_hatoma"
            style="@style/time_table_caution_text"
            android:background="@drawable/corner_round"
            android:text="@string/time_table_note_uehara"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/view_time_table_description_ykf_hatoma"
            android:text="@string/time_table_note_ue_description"
            android:textColor="@color/secondary_text"
            android:textSize="12dp"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/view_time_table_description_ykf_hatoma"
        android:text="@string/time_table_note_ue_description2"
        android:textColor="@color/secondary_text"
        android:textSize="12dp"
        />
</LinearLayout>